# InteropPOC

./: .gitignore  CHeaderGenerator.cs  CMakeLists.txt  CppHeaderGenerator.cs  DummyTest.cs  Factory.cs  HeaderGenerator.cs  HeaderGeneratorMode.cs  HeaderGeneratorTarget.cs  Interop.csproj  Interop.sln  Program.cs  StructWrapper.cs  TypeConverter.cs  llvm_shared.cmake  llvm_static.cmake
driver/: Reko.cpp  Reko.h  RekoInterfaces.h  driver.cpp  driver.h  types.h
